--- a/eng/pipelines/generate-all-docs.yml
+++ b/eng/pipelines/generate-all-docs.yml
@@ -37,8 +37,8 @@ jobs:
           $directoryExists = Test-Path -Path "$(Build.SourcesDirectory)/_docs"
           Write-Output "##vso[task.setvariable variable=DirectoryExists]$directoryExists"
 
-      - task: PublishPipelineArtifact@0
-        condition: eq(variables['DirectoryExists'], True)
-        inputs:
-          artifactName: 'documentation' 
-          targetPath: '$(Build.SourcesDirectory)/_docs'
+      - ${{if eq(variables['DirectoryExists'], True) }}:
+        - task: PublishPipelineArtifact@0
+          inputs:
+            artifactName: 'documentation' 
+            targetPath: '$(Build.SourcesDirectory)/_docs'
