--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -339,6 +339,34 @@ commands =
     -r {tox_root}
 
 
+[testenv:strict-sphinx]
+description="Builds a package's documentation with strict sphinx"
+skipsdist = true
+skip_install = true
+passenv = *
+setenv =
+  {[testenv]setenv}
+  PROXY_URL=http://localhost:5023
+deps =
+  {[base]deps}
+  sphinx==6.2.1
+  sphinx_rtd_theme==1.3.0
+  myst_parser==2.0.0
+  sphinxcontrib-jquery==4.1
+commands =
+  python {repository_root}/eng/tox/create_package_and_install.py \
+    -d {envtmpdir}/dist \
+    -p {tox_root} \
+    -w {envtmpdir} \
+    --package-type sdist
+  python {repository_root}/eng/tox/prep_sphinx_env.py -d {envtmpdir}/dist -t {tox_root}
+  python {repository_root}/eng/tox/run_sphinx_apidoc.py -w {envtmpdir}/dist -r {tox_root}
+  python {repository_root}/eng/tox/run_sphinx_build.py \
+    -w {envtmpdir}/dist/unzipped/docgen \
+    -o {envtmpdir}/dist/site \
+    -r {tox_root} \
+    --strict true
+
 [testenv:depends]
 description = Ensures all modules in a target package can be successfully imported
 setenv =
