--- a/sdk/storage/ci.yml
+++ b/sdk/storage/ci.yml
@@ -29,6 +29,7 @@ extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: storage
+    BuildTargetingString: azure-storage-blob
     TestProxy: true
     TestTimeoutInMinutes: 120
     # Override the base matrix due to the issues with building cryptography on unsupported platforms
