--- a/eng/pipelines/templates/jobs/ci.tests.yml
+++ b/eng/pipelines/templates/jobs/ci.tests.yml
@@ -22,7 +22,7 @@ parameters:
     default: 60
   - name: ToxEnvParallel
     type: string
-    default: '--tenvparallel'
+    default: ''
   - name: UnsupportedToxEnvironments
     type: string
     default: ''
