--- a/eng/pipelines/templates/jobs/ci.yml
+++ b/eng/pipelines/templates/jobs/ci.yml
@@ -28,7 +28,7 @@ parameters:
     default: 60
   - name: ToxEnvParallel
     type: string
-    default: '--tenvparallel'
+    default: ''
   - name: InjectedPackages
     type: string
     default: ''
