--- a/eng/pipelines/templates/stages/cosmos-sdk-client.yml
+++ b/eng/pipelines/templates/stages/cosmos-sdk-client.yml
@@ -18,16 +18,17 @@ parameters:
   type: boolean
   default: false
 
-extends:
-  template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
-  parameters:
-    ServiceDirectory: ${{ parameters.ServiceDirectory }}
-    # Skip emulator tests in the CI run
-    # TestMarkArgument: not cosmosEmulator
-    InjectedPackages: ${{parameters.InjectedPackages}}
-    Artifacts: ${{parameters.Artifacts}}
-
 stages:
+  - stage: Build
+    jobs:
+      template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
+      parameters:
+        ServiceDirectory: ${{ parameters.ServiceDirectory }}
+        # Skip emulator tests in the CI run
+        # TestMarkArgument: not cosmosEmulator
+        InjectedPackages: ${{parameters.InjectedPackages}}
+        Artifacts: ${{parameters.Artifacts}}
+        
   - stage: Test_Emulator
     dependsOn: []
     jobs:
