filter to just the least async tests

--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -72,7 +72,7 @@ commands =
     python -m pip --version
     python {repository_root}/eng/tox/create_package_and_install.py -d {envtmpdir} -p {tox_root} -w {envtmpdir}
     python -m pip freeze
-    pytest {[pytest]default_args} {posargs} {tox_root}/tests/test_blob_access_conditions_async.py
+    pytest {[pytest]default_args} {posargs} {tox_root}/tests/test_blob_access_conditions_async.py -k "test_lease"
 
 
 [testenv:pylint]
