--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -66,7 +66,7 @@ setenv =
   VIRTUALENV_WHEEL=0.37.0
   VIRTUALENV_PIP=23.2.1
   VIRTUALENV_SETUPTOOLS=67.6.0
-  LOGGING__LOGLEVEL__DEFAULT="debug"
+  LOGGING__LOGLEVEL__DEFAULT="Debug"
 deps = {[base]deps}
 install_command = python -m pip install {opts} {packages} --cache-dir {tox_root}/../.tox_pip_cache_{envname}
 commands =
