Fix ci.yml name and add code owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -171,6 +171,9 @@
 # PRLabel: %Event Grid
 /sdk/eventgrid/                                                      @lmazuel @l0lawrence
 
+# PRLabel: %Image Analysis
+/sdk/vision/azure-ai-vision-imageanalysis/                           @dargilco @rhurey
+
 # PRLabel: %HDInsight
 /sdk/hdinsight/                                                      @idear1203
 
