--- a/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/pipeline_job_with_parallel_job_with_input_bindings.yml
+++ b/sdk/ml/azure-ai-ml/tests/test_configs/pipeline_jobs/pipeline_job_with_parallel_job_with_input_bindings.yml
@@ -22,7 +22,7 @@ outputs:
   job_out_path_1:
     mode: mount
 
-# here the jobs in the pipelinepipeline_job_with_parallel_job_with_input_bindings
+# here the jobs in the pipeline
 jobs:
   hello_world:
     # We pass the trained model from the train step to use to parallel inference
