--- a/sdk/vision/ci.yml
+++ b/sdk/vision/ci.yml
@@ -25,6 +25,7 @@ extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: vision
+    TestProxy: true
     Artifacts:
     - name: azure-ai-vision-imageanalysis
       safeName: azureaivisionimageanalysis
