2nd attempt to suppress MyPy errors

--- a/sdk/vision/azure-ai-vision-imageanalysis/mypy.ini
+++ b/sdk/vision/azure-ai-vision-imageanalysis/mypy.ini
@@ -1,11 +1,9 @@
 # Per advice from Azure SDK team, exclude _models.py from mypy checks. This file was auto-generated from TypeSpec files, and produces these MyPy errors:
-# azure\ai\vision\imageanalysis\models\_models.py:164: error: Incompatible types in assignment (expression has type "List[DenseCaption]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
-# azure\ai\vision\imageanalysis\models\_models.py:634: error: Incompatible types in assignment (expression has type "List[DetectedObject]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
-# azure\ai\vision\imageanalysis\models\_models.py:665: error: Incompatible types in assignment (expression has type "List[DetectedPerson]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
-# azure\ai\vision\imageanalysis\models\_models.py:732: error: Incompatible types in assignment (expression has type "List[CropRegion]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
-# azure\ai\vision\imageanalysis\models\_models.py:765: error: Incompatible types in assignment (expression has type "List[DetectedTag]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
-
-[mypy]
-exclude = (?x)(
-    ^azure/ai/vision/imageanalysis/models/_models\.py$
-  )
+#   azure\ai\vision\imageanalysis\models\_models.py:164: error: Incompatible types in assignment (expression has type "List[DenseCaption]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
+#   azure\ai\vision\imageanalysis\models\_models.py:634: error: Incompatible types in assignment (expression has type "List[DetectedObject]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
+#   azure\ai\vision\imageanalysis\models\_models.py:665: error: Incompatible types in assignment (expression has type "List[DetectedPerson]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
+#   azure\ai\vision\imageanalysis\models\_models.py:732: error: Incompatible types in assignment (expression has type "List[CropRegion]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
+#   azure\ai\vision\imageanalysis\models\_models.py:765: error: Incompatible types in assignment (expression has type "List[DetectedTag]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
+# I tried expluding only the file _models.py, using the "exclude" option, but that did not work. So I am excluding the entire models namespace.
+[mypy-azure.ai.vision.imageanalysis.models.*]
+ignore_errors = True
