Add samples and tests README.md files

--- a/sdk/vision/azure-ai-vision-imageanalysis/mypy.ini
+++ b/sdk/vision/azure-ai-vision-imageanalysis/mypy.ini
@@ -4,6 +4,7 @@
 #   azure\ai\vision\imageanalysis\models\_models.py:665: error: Incompatible types in assignment (expression has type "List[DetectedPerson]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
 #   azure\ai\vision\imageanalysis\models\_models.py:732: error: Incompatible types in assignment (expression has type "List[CropRegion]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
 #   azure\ai\vision\imageanalysis\models\_models.py:765: error: Incompatible types in assignment (expression has type "List[DetectedTag]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
-# I tried expluding only the file _models.py, using the "exclude" option, but that did not work. So I am excluding the entire models namespace.
+# This GitHub issue was opened: https://github.com/Azure/autorest.python/issues/2317
+# I tried excluding only the file _models.py using the "exclude" option, but that did not work. So I am excluding the entire models namespace.
 [mypy-azure.ai.vision.imageanalysis.models.*]
 ignore_errors = True
