Turn on mypy gate

--- a/sdk/ai/azure-ai-generative/pyproject.toml
+++ b/sdk/ai/azure-ai-generative/pyproject.toml
@@ -1,10 +1,10 @@
 [tool.azure-sdk-build]
-mypy = false
+mypy = true
 type_check_samples = false
 verifytypes = false
 pyright = false
 pylint = false
 black = false
 bandit = false
-sphinx = true
+sphinx=true
 breaking = false
