Updates to MyPy error suppression

--- a/sdk/vision/azure-ai-vision-imageanalysis/mypy.ini
+++ b/sdk/vision/azure-ai-vision-imageanalysis/mypy.ini
@@ -1,10 +1,13 @@
-# Per advice from Azure SDK team, exclude _models.py from mypy checks. This file was auto-generated from TypeSpec files, and produces these MyPy errors:
+# Per advice from Azure SDK team, suppress the assignment error in _models.py. This file was auto-generated from TypeSpec files, and produces these MyPy errors:
 #   azure\ai\vision\imageanalysis\models\_models.py:164: error: Incompatible types in assignment (expression has type "List[DenseCaption]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
 #   azure\ai\vision\imageanalysis\models\_models.py:634: error: Incompatible types in assignment (expression has type "List[DetectedObject]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
 #   azure\ai\vision\imageanalysis\models\_models.py:665: error: Incompatible types in assignment (expression has type "List[DetectedPerson]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
 #   azure\ai\vision\imageanalysis\models\_models.py:732: error: Incompatible types in assignment (expression has type "List[CropRegion]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
 #   azure\ai\vision\imageanalysis\models\_models.py:765: error: Incompatible types in assignment (expression has type "List[DetectedTag]", base class "_MyMutableMapping" defined the type as "Callable[[_MyMutableMapping], ValuesView[Any]]")  [assignment]
-# This GitHub issue was opened: https://github.com/Azure/autorest.python/issues/2317
-# I tried excluding only the file _models.py using the "exclude" option, but that did not work. So I am excluding the entire models namespace.
-[mypy-azure.ai.vision.imageanalysis.models.*]
-ignore_errors = True
+# See GitHub issue: https://github.com/Azure/autorest.python/issues/2317
+[mypy-azure.ai.vision.imageanalysis.models._models]
+disable_error_code = assignment
+
+# Note that we also have the line `# mypy: disable-error-code="attr-defined"` at the top of every sample code file
+# under the "samples" folder. This is to suppress the MyPy error "ImageAnalysisClient has no attribute analyze  [attr-defined]".
+# See GitHub issue: https://github.com/Azure/autorest.python/issues/2321
