--- a/sdk/ai/azure-ai-resources/pyproject.toml
+++ b/sdk/ai/azure-ai-resources/pyproject.toml
@@ -8,3 +8,9 @@ black = false
 bandit = false
 sphinx=true
 breaking = false
+
+[tool.mypy] 
+python_version = "3.10"
+exclude = ["azure/ai/ml/_vendor", "azure/ai/ml/_restclient"] 
+warn_unused_configs = true 
+ignore_missing_imports = true
