Exclude _restclient from mypy

--- a/sdk/ai/azure-ai-resources/pyproject.toml
+++ b/sdk/ai/azure-ai-resources/pyproject.toml
@@ -11,6 +11,6 @@ breaking = false
 
 [tool.mypy] 
 python_version = "3.10"
-exclude = ["azure/ai/ml/_vendor", "azure/ai/ml/_restclient"] 
+exclude = ["azure/ai/resources/_restclient"] 
 warn_unused_configs = true 
 ignore_missing_imports = true
