--- a/sdk/ai/azure-ai-resources/pyproject.toml
+++ b/sdk/ai/azure-ai-resources/pyproject.toml
@@ -11,6 +11,6 @@ breaking = false
 
 [tool.mypy] 
 python_version = "3.10"
-exclude = ["azure/ai/resources/_restclient"] 
+exclude = ["azure/ai/resources/_restclient", "azure/ai/resources/resources/_index/_langchain/vendor"] 
 warn_unused_configs = true 
 ignore_missing_imports = true
