--- a/sdk/ai/azure-ai-resources/pyproject.toml
+++ b/sdk/ai/azure-ai-resources/pyproject.toml
@@ -14,3 +14,4 @@ python_version = "3.10"
 exclude = ["azure/ai/resources/_restclient", "azure/ai/resources/_index/_langchain/vendor", "tests"]   
 warn_unused_configs = true 
 ignore_missing_imports = true
+follow_imports = "skip"
