--- a/sdk/ai/azure-ai-resources/pyproject.toml
+++ b/sdk/ai/azure-ai-resources/pyproject.toml
@@ -11,7 +11,7 @@ breaking = false
 
 [tool.mypy] 
 python_version = "3.10"
-exclude = ["azure/ai/resources/_restclient", "azure/ai/resources/_index/_langchain/vendor", "tests"]   
+exclude = ["azure/ai/resources/_restclient", "setup.py", "azure/ai/resources/_index/_langchain/vendor", "tests"]   
 warn_unused_configs = true 
 ignore_missing_imports = true
 follow_imports = "skip"
