Disabled following stubs

--- a/sdk/ai/azure-ai-resources/pyproject.toml
+++ b/sdk/ai/azure-ai-resources/pyproject.toml
@@ -15,3 +15,4 @@ exclude = ["azure/ai/resources/_restclient", "setup.py", "azure/ai/resources/_in
 warn_unused_configs = true 
 ignore_missing_imports = true
 follow_imports = "skip"
+follow_imports_for_stubs = false
