--- a/sdk/hybridcontainerservice/ci.yml
+++ b/sdk/hybridcontainerservice/ci.yml
@@ -28,6 +28,7 @@ extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: hybridcontainerservice
+    TestProxy: true
     Artifacts:
     - name: azure-mgmt-hybridcontainerservice
       safeName: azuremgmthybridcontainerservice
