--- a/sdk/ai/azure-ai-generative/pyproject.toml
+++ b/sdk/ai/azure-ai-generative/pyproject.toml
@@ -12,7 +12,7 @@ whl_no_aio = false
 
 [tool.mypy] 
 python_version = "3.10"
-exclude = ["azure/ai/generative/_restclient", "tests", "setup.py"]   
+exclude = ["azure/ai/generative/_restclient", "azure/ai/generative/index/_langchain/vendor", "tests", "setup.py"]   
 warn_unused_configs = true 
 follow_imports = "skip"
 ignore_missing_imports = true
