--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -26,3 +26,11 @@ extend_skip_glob = [
   "*/doc/*",
   "*/.tox/*",
 ]
+
+[tool.mypy] 
+python_version = "3.10"
+exclude = ["tests", "setup.py", "samples"]   
+warn_unused_configs = true 
+follow_imports = "skip"
+ignore_missing_imports = true
+follow_imports_for_stubs = false
