--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -29,7 +29,7 @@ extend_skip_glob = [
 
 [tool.mypy] 
 python_version = "3.10"
-exclude = ["tests", "setup.py", "samples"]   
+exclude = ["azure/ai/ml/_restclient", "azure/ai/ml/_vendor/", "tests", "setup.py", "samples"]   
 warn_unused_configs = true 
 follow_imports = "skip"
 ignore_missing_imports = true
