Replaced rikogeln with flborn in the CODEOWNER section of Mixed Reality

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -666,7 +666,7 @@
 #/<NotInRepo>/          @shijojoy
 
 # ServiceLabel: %Mixed Reality
-#/<NotInRepo>/          @crtreasu @rikogeln
+#/<NotInRepo>/          @crtreasu @flborn
 
 # ServiceLabel: %Mobile Engagement %Service Attention
 #/<NotInRepo>/          @kpiteira
