--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -666,7 +666,7 @@
 #/<NotInRepo>/          @shijojoy
 
 # ServiceLabel: %Mixed Reality
-#/<NotInRepo>/          @crtreasu @rikogeln
+#/<NotInRepo>/          @crtreasu @FlorianBorn71
 
 # ServiceLabel: %Mobile Engagement %Service Attention
 #/<NotInRepo>/          @kpiteira
