--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -28,6 +28,6 @@ ignore_missing_imports = true
 follow_imports = "skip" 
 follow_imports_for_stubs = "skip"
 
-[tool.pylint]
-disable = ["all"]
-enable = ["docstring-missing-param", "docstring-missing-return", "docstring-missing-rtype", "missing-docstring", "missing-module-docstring", "missing-class-docstring", "missing-function-docstring"]
+[tool.pylint.'MESSAGES CONTROL']
+disable = "all"
+enable = "docstring-missing-param, docstring-missing-return, docstring-missing-rtype, missing-docstring, missing-module-docstring, missing-class-docstring, missing-function-docstring"
