--- a/sdk/ai/azure-ai-resources/pyproject.toml
+++ b/sdk/ai/azure-ai-resources/pyproject.toml
@@ -19,5 +19,4 @@ ignore_missing_imports = true
 follow_imports_for_stubs = false
 
 [tool.pylint.'MESSAGES CONTROL']
-disable = "all"
-enable = "docstring-missing-param, docstring-missing-return, docstring-missing-rtype, missing-docstring, missing-module-docstring, missing-class-docstring, missing-function-docstring"
+disable = "line-too-long, trailing-whitespace"
