--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -48,7 +48,7 @@ pkgs =
 
 [pytest]
 ignore_args=--ignore=.tox --ignore=build --ignore=.eggs
-default_args = -rsfE --junitxml={tox_root}/test-junit-{envname}.xml --verbose --cov-branch --durations=10 --ignore=azure {[pytest]ignore_args}
+default_args = -rsfE --junitxml={tox_root}/test-junit-{envname}.xml --verbose --cov-branch --durations=10 --ignore=azure {[pytest]ignore_args} --log-cli-level={pytest_log_level}
 
 [testenv]
 parallel_show_output =True
