--- a/sdk/ai/azure-ai-generative/pyproject.toml
+++ b/sdk/ai/azure-ai-generative/pyproject.toml
@@ -3,7 +3,7 @@ mypy = true
 type_check_samples = false
 verifytypes = false
 pyright = false
-pylint = true
+pylint = false
 black = false
 bandit = false
 sphinx=true
@@ -18,6 +18,3 @@ warn_unused_configs = true
 follow_imports = "skip"
 ignore_missing_imports = true
 follow_imports_for_stubs = false
-
-[tool.pylint.'MESSAGES CONTROL']
-disable = "line-too-long, trailing-whitespace"
