--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -28,7 +28,36 @@ extend_skip_glob = [
 ]
 
 [tool.mypy] 
-exclude = ["azure/ai/ml/_vendor", "azure/ai/ml/_restclient", "azure/ai/ml/_schema", "azure/ai/ml/_internal"] 
+exclude = ["azure/ai/ml/_vendor",
+"azure/ai/ml/_restclient",
+"azure/ai/ml/_schema",
+"azure/ai/ml/_internal",
+"azure/ai/ml/entities/_assets",
+"azure/ai/ml/entities/_builders",
+"azure/ai/ml/entities/_workspace",
+"azure/ai/ml/entities/_job",
+"azure/ai/ml/entities/_deployment",
+"azure/ai/ml/entities/_load_functions.py",
+"azure/ai/ml/entities/_assets",
+"azure/ai/ml/entities/_component",
+"azure/ai/ml/entities/_data_import",
+"azure/ai/ml/entities/_datastore",
+"azure/ai/ml/_sweep",
+"azure/ai/ml/_parallel",
+"azure/ai/ml/_operations",
+"azure/ai/ml/_identity",
+"azure/ai/ml/dsl",
+"azure/ai/ml/data_transfer",
+"azure/ai/ml/constants",
+"azure/ai/ml/automl",
+"azure/ai/ml/_utils",
+"azure/ai/ml/_telemetry",
+"azure/ai/ml/_logging",
+"azure/ai/ml/_local_endpoints",
+"azure/ai/ml/_file_utils",
+"azure/ai/ml/_artifacts",
+"azure/ai/ml/_arm_deployments"
+] 
 disallow_untyped_defs = true 
 warn_unused_ignores = true 
 warn_return_any = true 
