update pyproject.toml - 3

--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -37,15 +37,20 @@ exclude = ["azure/ai/ml/_vendor",
 "azure/ai/ml/entities/_workspace",
 "azure/ai/ml/entities/_job",
 "azure/ai/ml/entities/_deployment",
+"azure/ai/ml/entities/_inputs_outputs",
 "azure/ai/ml/entities/_load_functions.py",
+"azure/ai/ml/_ml_client.py",
 "azure/ai/ml/entities/_assets",
 "azure/ai/ml/entities/_component",
 "azure/ai/ml/entities/_data_import",
 "azure/ai/ml/entities/_datastore",
 "azure/ai/ml/_sweep",
 "azure/ai/ml/_parallel",
-"azure/ai/ml/_operations",
-"azure/ai/ml/_identity",
+"azure/ai/ml/operations",
+"azure/ai/ml/identity",
+"azure/ai/ml/entities/_schedule",
+"azure/ai/ml/entities/_endpoint",
+"azure/ai/ml/entities/_monitoring",
 "azure/ai/ml/dsl",
 "azure/ai/ml/data_transfer",
 "azure/ai/ml/constants",
