update pyproject.toml - 4

--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -39,11 +39,20 @@ exclude = ["azure/ai/ml/_vendor",
 "azure/ai/ml/entities/_deployment",
 "azure/ai/ml/entities/_inputs_outputs",
 "azure/ai/ml/entities/_load_functions.py",
+"azure/ai/ml/exceptions.py",
+"azure/ai/ml/_azure_environments.py",
+"azure/ai/ml/_scope_dependent_operations.py",
+"azure/ai/ml/entities/_credentials.py",
+"azure/ai/ml/entities/_util.py",
 "azure/ai/ml/_ml_client.py",
+"azure/ai/ml/_exception_helper.py",
+"azure/ai/ml/entities/_registry",
+"azure/ai/ml/entities/_validation",
 "azure/ai/ml/entities/_assets",
 "azure/ai/ml/entities/_component",
 "azure/ai/ml/entities/_data_import",
 "azure/ai/ml/entities/_datastore",
+"azure/ai/ml/entities/_compute",
 "azure/ai/ml/_sweep",
 "azure/ai/ml/_parallel",
 "azure/ai/ml/operations",
