update pyproject.toml - 5

--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -36,6 +36,8 @@ exclude = ["azure/ai/ml/_vendor",
 "azure/ai/ml/entities/_builders",
 "azure/ai/ml/entities/_workspace",
 "azure/ai/ml/entities/_job",
+"azure/ai/ml/entities/_notification",
+"azure/ai/ml/entities/_feature_set",
 "azure/ai/ml/entities/_deployment",
 "azure/ai/ml/entities/_inputs_outputs",
 "azure/ai/ml/entities/_load_functions.py",
