Image Analysis Python SDK (#33487)
* Image Analysis Python SDK

* Fix ci.yml name and add code owners

* Update cspell.json and CODEOWNERS

* Root README.md: Use full-path links, fix broken links, and some other minor text correction

* Fix `Run Pylint` issues. Add README.md on hand-customization

* More pylint fixes

* Fix samples errors in `Run MyPy` job, and update root README.md

* mypy fixes in test

* More mypy fixes in test

* More mypy fixes in test

* More mypy fixes in test

* Fix Run Pyint

* Recordings for sync tests

* Test recordings for async

* Push test recordings to azure-sdk-assets

* Correct build of path to load sample.jpg

* Add 'TestProxy: true' to ci.yml

* Add mypy.ini file to suppress errors from auto-generated _models.py

* 2nd attempt to suppress MyPy errors

* Add samples and tests README.md files

* Fix `Verify Readmes` by excluding README.md in the test folder

* Set version to 0.16.0b1

* Changed my mind... going back to version 1.0.0b1

* Fix sphinx issues

* Fix pylint

* Move customization to _patch.py files

* Suppress MyPy errors on sample code. The error message was: `error: ImageAnalysisClient has no attribute analyze  [attr-defined]`

* Update root README.md

* Address review comments from xiangyan99. Thank you Xiang!

* Revert back to Python 3.7 as required minimum version instead of 3.8, size ADO pipeline still uses 3.7 for Windows tests

* Updates to MyPy error suppression

* Add notes in root README.md to mention Document Intelligence service

* Updates samples: closing bracket in a new line

* Remove the call to client.close() from sync samples. Add one more async sample. Fix docs for VisualFeature

* Fix typo in samples README.md

* Minor updates, based on review comments from the Java SDK PR

* Update release date and comment in CHANGELOG.md

* Fix Lint CODEOWNERS issue (unrelated to this PR)

* Fix typo

* Remove unneeded `f` from print(f...)

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -171,6 +171,9 @@
 # PRLabel: %Event Grid
 /sdk/eventgrid/                                                      @lmazuel @l0lawrence
 
+# PRLabel: %Image Analysis
+/sdk/vision/azure-ai-vision-imageanalysis/                           @dargilco @rhurey
+
 # PRLabel: %HDInsight
 /sdk/hdinsight/                                                      @idear1203
 
@@ -613,6 +616,9 @@
 
 # ServiceLabel: %HPC Cache %Service Attention
 #/<NotInRepo>/          @romahamu @omzevall
+
+# ServiceLabel: %Image Analysis %Service Attention
+/sdk/vision/azure-ai-vision-imageanalysis/          @dargilco @rhurey
 
 # ServiceLabel: %Import Export %Service Attention
 #/<NotInRepo>/          @madhurinms
