--- a/eng/tox/tox.ini
+++ b/eng/tox/tox.ini
@@ -115,6 +115,7 @@ setenv =
   PROXY_URL=http://localhost:5002
 deps =
   -rdev_requirements.txt
+  PyGitHub>=1.59.0
 commands =
     python -m pip install pylint=={[testenv:next-pylint]pylint_version}
     python -m pip install azure-pylint-guidelines-checker==0.2.0 --index-url="https://pkgs.dev.azure.com/azure-sdk/public/_packaging/azure-sdk-for-python/pypi/simple/"
@@ -184,6 +185,7 @@ deps =
   types-requests==2.31.0.6
   types-six==1.16.21.9
   types-redis==4.6.0.7
+  PyGitHub>=1.59.0
 commands =
     python {repository_root}/eng/tox/create_package_and_install.py \
       -d {envtmpdir}/dist \
@@ -227,6 +229,7 @@ setenv =
 deps =
   {[base]deps}
   pyright=={[testenv:next-pyright]pyright_version}
+  PyGitHub>=1.59.0
 commands =
     python {repository_root}/eng/tox/create_package_and_install.py \
       -d {envtmpdir}/dist \
@@ -353,6 +356,7 @@ deps =
   sphinx_rtd_theme==1.3.0
   myst_parser==2.0.0
   sphinxcontrib-jquery==4.1
+  PyGitHub>=1.59.0
 commands =
   python {repository_root}/eng/tox/create_package_and_install.py \
     -d {envtmpdir}/dist \
