update pyproject.toml - 2

--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -51,7 +51,28 @@ exclude = ["azure/ai/ml/_vendor",
 "azure/ai/ml/_local_endpoints",
 "azure/ai/ml/_file_utils",
 "azure/ai/ml/_artifacts",
-"azure/ai/ml/_arm_deployments"
+"azure/ai/ml/_arm_deployments",
+"azure/ai/ml/entities/_mixins",
+"azure/ai/ml/entities/_job",
+"azure/ai/ml/entities/_feature_store_entity",
+"azure/ai/ml/entities/_feature_store",
+"azure/ai/ml/entities/_feature_set",
+"azure/ai/ml/entities/_deployment",
+"azure/ai/ml/entities/_datastore",
+"azure/ai/ml/entities/_data_import",
+"azure/ai/ml/entities/_data",
+"azure/ai/ml/entities/_compute",
+"azure/ai/ml/entities/_component",
+"azure/ai/ml/entities/_builders",
+"azure/ai/ml/entities/_assets",
+"azure/ai/ml/entities/_system_data",
+"azure/ai/ml/entities/_inputs_outputs",
+"azure/ai/ml/entities/_util",
+"azure/ai/ml/entities/_workspace",
+"azure/ai/ml/entities/_endpoint",
+"azure/ai/ml/entities/_monitoring",
+"azure/ai/ml/entities/_load_functions",
+"azure/ai/ml/entities/_validate_funcs"
 ] 
 disallow_untyped_defs = true 
 warn_unused_ignores = true 
