--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -59,7 +59,7 @@
 /sdk/storage/                                                        @annatisch @jalauzon-msft @vincenttran-msft
 
 # PRLabel: %App Configuration
-/sdk/appconfiguration/                                               @xiangyan99 @YalinLi0312
+/sdk/appconfiguration/                                               @YalinLi0312
 
 # PRLabel: %App Configuration Provider
 /sdk/appconfiguration/azure-appconfiguration-provider/               @mametcal @albertofori @avanigupta @mrm9084
@@ -317,7 +317,10 @@
 /sdk/textanalytics/                                                  @kristapratico @quentinRobinson @wangyuantao
 
 # PRLabel: %Cognitive - Form Recognizer
-/sdk/formrecognizer/                                                 @kristapratico @iscai-msft @catalinaperalta
+/sdk/formrecognizer/                                                 @YalinLi0312
+
+# PRLabel: %Document Intelligence
+/sdk/documentintelligence/                                           @YalinLi0312
 
 # PRLabel: %Cognitive - Metrics Advisor
 /sdk/metricsadvisor/                                                 @xiangyan99 @kristapratico @iscai-msft
@@ -339,7 +342,7 @@
 /sdk/graphrbac/                                                      @msyyc @ChenxiJiang333
 
 # PRLabel: %Tables
-/sdk/tables/                                                         @annatisch @YalinLi0312
+/sdk/tables/                                                         @YalinLi0312
 
 # PRLabel: %Media
 /sdk/media/                                                          @naiteeks @giakas
