After running tox run -e generate -c ..\..\..\eng\tox\tox.ini --root .

--- a/sdk/vision/azure-ai-vision-imageanalysis/tsp-location.yaml
+++ b/sdk/vision/azure-ai-vision-imageanalysis/tsp-location.yaml
@@ -1,5 +1,4 @@
-additionalDirectories: []
-repo: Azure/azure-rest-api-specs
 directory: specification/ai/ImageAnalysis
 commit: 49a78b92e9ef42da134e833e36123ca9bb20994f
-
+repo: Azure/azure-rest-api-specs
+additionalDirectories:
