--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -29,8 +29,29 @@ extend_skip_glob = [
 
 [tool.mypy] 
 python_version = "3.10"
-exclude = ["*"]
-include = ["azure/ai/ml/_internal/"]
+exclude = [
+  "azure/ai/ml/_restclient",
+  "azure/ai/ml/_vendor/",
+  "azure/ai/ml/_schema/",
+  "azure/ai/ml/_arm_deployments/",
+  "tests",
+  "setup.py",
+  "samples",
+  "azure/ai/ml/_artifacts/",
+  "azure/ai/ml/_file_utils/",
+  "azure/ai/ml/_local_endpoints/",
+  "azure/ai/ml/_logging/",
+  "azure/ai/ml/_telemetry/",
+  "azure/ai/ml/_utils",
+  "azure/ai/ml/constants/",
+  "azure/ai/ml/data_transfer/",
+  "azure/ai/ml/dsl",
+  "azure/ai/ml/entities/",
+  "azure/ai/ml/identity/",
+  "azure/ai/ml/operations/",
+  "azure/ai/ml/parallel/",
+  "azure/ai/ml/sweep/",
+]   
 warn_unused_configs = true 
 follow_imports = "skip"
 ignore_missing_imports = true
