--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -51,6 +51,11 @@ exclude = [
   "azure/ai/ml/operations/",
   "azure/ai/ml/parallel/",
   "azure/ai/ml/sweep/",
+  "azure/ai/ml/_azure_environments.py",
+  "azure/ai/ml/_exceptions.py",
+  "azure/ai/ml/_scope_dependent_operations.py",
+  "azure/ai/ml/_ml_client.py",
+  "azure/ai/ml/_exception_helper.py",
 ]   
 warn_unused_configs = true 
 follow_imports = "skip"
