--- a/sdk/elasticsan/ci.yml
+++ b/sdk/elasticsan/ci.yml
@@ -28,6 +28,7 @@ extends:
   template: ../../eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
     ServiceDirectory: elasticsan
+    TestProxy: true
     Artifacts:
     - name: azure-mgmt-elasticsan
       safeName: azuremgmtelasticsan
