--- a/eng/pipelines/templates/steps/build-package-artifacts.yml
+++ b/eng/pipelines/templates/steps/build-package-artifacts.yml
@@ -40,7 +40,7 @@ steps:
   - template: /eng/common/pipelines/templates/steps/set-default-branch.yml
 
   - pwsh: |
-      $(Build.SourcesDirectory)/eng/common/scripts/Generate-PR-Diff.ps1 $(Build.ArtifactStagingDirectory)/BlastRadius/ sdk/
+      $(Build.SourcesDirectory)/eng/common/scripts/Generate-PR-Diff.ps1 -ArtifactPath $(Build.ArtifactStagingDirectory)/BlastRadius/ -TargetPath sdk/
       cat $(Build.ArtifactStagingDirectory)/BlastRadius/diff.txt
     displayName: Calculate Blast Radius
 
