--- a/eng/.docsettings.yml
+++ b/eng/.docsettings.yml
@@ -13,6 +13,7 @@ omitted_paths:
   - sdk/nspkg/*
   - sdk/**/swagger/*
   - sdk/ml/azure-ai-ml/tests/*
+  - sdk/storage/azure-storage-extensions/*
 
 language: python
 root_check_enabled: True
