--- a/sdk/storage/azure-storage-extensions/pyproject.toml
+++ b/sdk/storage/azure-storage-extensions/pyproject.toml
@@ -8,6 +8,8 @@ sphinx = false
 verifysdist = false
 verifywhl = false
 sdist = false
+breaking = false
+bandit = false
 
 [tool.cibuildwheel]
 build = ["cp38*", "cp39*", "cp310*", "cp311*", "cp312*", "pp39*", "pp310*"]
