--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.azure-sdk-build]
-mypy = false
+mypy = true
 pyright = false
 type_check_samples = false
 verifytypes = false
@@ -28,11 +28,36 @@ extend_skip_glob = [
 ]
 
 [tool.mypy] 
-exclude = ["azure/ai/ml/_vendor", "azure/ai/ml/_restclient"] 
-disallow_untyped_defs = true 
-warn_unused_ignores = true 
-warn_return_any = true 
-warn_unreachable = true 
-ignore_missing_imports = true 
-follow_imports = "skip" 
-follow_imports_for_stubs = "skip"
+python_version = "3.10"
+exclude = [
+  "azure/ai/ml/_restclient",
+  "azure/ai/ml/_vendor/",
+  "azure/ai/ml/_schema/",
+  "azure/ai/ml/_arm_deployments/",
+  "tests",
+  "setup.py",
+  "samples",
+  "azure/ai/ml/_artifacts/",
+  "azure/ai/ml/_file_utils/",
+  "azure/ai/ml/_local_endpoints/",
+  "azure/ai/ml/_logging/",
+  "azure/ai/ml/_telemetry/",
+  "azure/ai/ml/_utils",
+  "azure/ai/ml/constants/",
+  "azure/ai/ml/data_transfer/",
+  "azure/ai/ml/dsl",
+  "azure/ai/ml/entities/",
+  "azure/ai/ml/identity/",
+  "azure/ai/ml/operations/",
+  "azure/ai/ml/parallel/",
+  "azure/ai/ml/sweep/",
+  "azure/ai/ml/_azure_environments.py",
+  "azure/ai/ml/exceptions.py",
+  "azure/ai/ml/_scope_dependent_operations.py",
+  "azure/ai/ml/_ml_client.py",
+  "azure/ai/ml/_exception_helper.py",
+]   
+warn_unused_configs = true 
+follow_imports = "skip"
+ignore_missing_imports = true
+follow_imports_for_stubs = false
