--- a/sdk/monitor/azure-monitor-opentelemetry/pyproject.toml
+++ b/sdk/monitor/azure-monitor-opentelemetry/pyproject.toml
@@ -2,7 +2,7 @@
 type_check_samples = false
 verifytypes = false
 pyright = false
-mypy = false
 pylint = true
 bandit = true
 strict_sphinx = true
+ci_enabled = false
