--- a/sdk/openai/azure-openai/pyproject.toml
+++ b/sdk/openai/azure-openai/pyproject.toml
@@ -1,2 +1,6 @@
 [tool.azure-sdk-build]
-ci_enabled = false
+pylint = false
+mypy = false
+pyright = false
+type_check_samples = false
+verifytypes = false
