--- a/sdk/ml/azure-ai-ml/pyproject.toml
+++ b/sdk/ml/azure-ai-ml/pyproject.toml
@@ -48,6 +48,7 @@ exclude = [
   "azure/ai/ml/constants/",
   "azure/ai/ml/data_transfer/",
   "azure/ai/ml/dsl",
+  "azure/ai/ml/operations/",
   "azure/ai/ml/parallel/",
   "azure/ai/ml/sweep/",
   "azure/ai/ml/_azure_environments.py",
