--- a/eng/pipelines/templates/stages/cosmos-sdk-client.yml
+++ b/eng/pipelines/templates/stages/cosmos-sdk-client.yml
@@ -15,6 +15,8 @@ parameters:
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
+    # Run only emulator tests in CI
+    TestMarkArgument: cosmosEmulator
     ServiceDirectory: cosmos
     BeforeTestSteps:
       - template: /eng/common/pipelines/templates/steps/cosmos-emulator.yml
