--- a/sdk/storage/azure-storage-extensions/pyproject.toml
+++ b/sdk/storage/azure-storage-extensions/pyproject.toml
@@ -12,6 +12,8 @@ breaking = false
 bandit = false
 
 [tool.cibuildwheel]
-archs-macos = "x86_64 arm64"
 build = ["cp38*", "cp39*", "cp310*", "cp311*", "cp312*", "pp39*", "pp310*"]
 skip = ["*-musllinux*"]
+
+[tool.cibuildwheel.macos]
+archs = "x86_64 arm64"
