--- a/sdk/storage/azure-storage-extensions/pyproject.toml
+++ b/sdk/storage/azure-storage-extensions/pyproject.toml
@@ -16,6 +16,7 @@ build = ["cp38*", "cp39*", "cp310*", "cp311*", "cp312*", "pp39*", "pp310*"]
 skip = ["*-musllinux*"]
 test-requires = "pytest"
 test-command = "pytest {project}/tests"
+test-skip = "*-macosx_arm64"
 
 [tool.cibuildwheel.macos]
 archs = "x86_64 arm64"
