Try without comma

--- a/sdk/storage/azure-storage-extensions/pyproject.toml
+++ b/sdk/storage/azure-storage-extensions/pyproject.toml
@@ -18,7 +18,7 @@ test-command = "pytest {project}/tests"
 test-skip = "*-macosx_arm64"
 
 [tool.cibuildwheel.linux]
-archs = "x86_64, aarch64"
+archs = "x86_64 aarch64"
 
 [tool.cibuildwheel.macos]
 archs = "x86_64 arm64"
